# discord-automatic-message-deleter

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.sqlx/: query-1e5e7198301a0bef4e679c87d8fff1b348e1cb3250857099fbc0ba6dcec7599a.json  query-5b59bcbec3ca466155863a9fe3868e09cd793ce34e2ca4a04c4827bf8a1004bc.json  query-71c6d54db4cf40b67cb3a58159f833a87aec359bf42adf0331039ce43fb6316c.json  query-7c9dff5ec87041f03f635c4005e274d4c5d0fe7fcbd6f181c7cc98489399c606.json  query-990215ef168c72854ef0ea7fac17cab829bcc800a4df02d3060421af1844c633.json
migrations/: 20250524145959_initial.down.sql  20250524145959_initial.up.sql
src/: commands.rs  deps.rs  handler.rs  main.rs  message_deletion.rs  persistence.rs
